trying to fix horizontal scroll, failing

--- a/day-3/siteclone/style.css
+++ b/day-3/siteclone/style.css
@@ -1,3 +1,9 @@
+
+ *{
+    border: 1px;
+    color: red;
+    }
+
 .set-height{
 
     min-height:300px;
@@ -10,3 +16,4 @@
 .low-bar-size{
     min-height:150px;
 }
+
